# astroids

./: Astroids.cabal  README.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Animation.hs  Boundable.hs  BoundingBox.hs  Button.hs  Collision.hs  Constants.hs  Controller.hs  Enemy.hs  Entity.hs  Main.hs  Model.hs  Pipeline.hs  Player.hs  Projectile.hs  Random.hs  Renderable.hs  Score.hs  Sprites.hs  Updates.hs  View.hs  highscores.txt
